--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phone Express</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 </head>
 <body>
+
 <!--Колонтитул-->
 <header>
     <div class="l_text">Карточка товара</div>
@@ -17,13 +19,14 @@
 <main>
     <h1>BlackBerry DTEK50</h1>
     <div class="param">
+        <div class="sale">Скидка<br>50%</div>
         <div>
-            <img src="img/phone_big.png" alt="" height="419" width="306"/>
+            <img class="foto" src="img/phone_big.png" alt=""/>
             <div class="small">
-                <img src="img/phone_small.png" alt="" height="100" width="35"/>
-                <img src="img/phone_small.png" alt="" height="100" width="35"/>
-                <img src="img/phone_small.png" alt="" height="100" width="35"/>
-                <img src="img/phone_small.png" alt="" height="100" width="35"/>
+                <img src="img/phone_small.png" alt="" />
+                <img src="img/phone_small.png" alt="" />
+                <img src="img/phone_small.png" alt="" />
+                <img src="img/phone_small.png" alt="" />
             </div>
         </div>
         <div>
@@ -42,7 +45,6 @@
                 Макс. объем карты памяти: 256 ГБ<br>
             </p>
         </div>
-        <div class="sale">Скидка<br>50%</div>
     </div>
     <div class="overview">
         <h2>Краткое описание</h2>
@@ -50,7 +52,9 @@
             камера: 16 Мп + 2 Мп, двойная фронтальная камера: 24 Мп + 2 Мп/ RAM 4 ГБ/ 64 ГБ
             встроенной памяти + microSD (до 256 ГБ)/ 3G/ LTE/ A-GPS/ ГЛОНАСС/ BDS/ поддержка
             2х SIM-карт (Nano-SIM)/ Android 8.1 (Oreo)/ 3340 мА*ч</p>
-        <p>Подробнее: <a href="https://rozetka.com.ua/huawei_p_smart_plus_black/p48225238/" target="_blank">https://rozetka.com.ua/huawei_p_smart_plus_black/p48225238/</a></p>
+        <a class="more" href="https://rozetka.com.ua/huawei_p_smart_plus_black/p48225238/" target="_blank">Подробнее
+        </a>
+
     </div>
 </main>
 
