--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 <!--Карточка товара-->
 <main>
     <h1>BlackBerry DTEK50</h1>
-    <div class="param">
-        <div class="sale">Скидка<br>50%</div>
-        <div>
-            <img class="foto" src="img/phone_big.png" alt=""/>
-            <div class="small">
+    <div class="blokOverview">
+        <div class="blokOverview__image">
+            <div class="sale">Скидка<br>50%</div>
+            <img class="imageBox" src="img/phone_big.png" alt=""/>
+            <div class="thumb">
                 <img src="img/phone_small.png" alt="" />
                 <img src="img/phone_small.png" alt="" />
                 <img src="img/phone_small.png" alt="" />
                 <img src="img/phone_small.png" alt="" />
             </div>
         </div>
-        <div>
+        <div class="blokOverview__text">
             <h2>Дисплей</h2>
             <p>Диагональ экрана: 6.3<br>
                 Разрешение дисплея: 2340 x 1080<br>
@@ -38,7 +38,7 @@
                 Материал экрана: Стекло
             </p>
 
-            <h2>Оперативная память</h2>
+            <h2>Память</h2>
             <p>Оперативная память: 4 ГБ<br>
                 Встроенная память: 64 ГБ<br>
                 Формат карт памяти: microSD<br>
@@ -46,13 +46,10 @@
             </p>
         </div>
     </div>
-    <div class="overview">
+    <div class="blokInfo">
         <h2>Краткое описание</h2>
-        <p>Экран (6.3", IPS, 2340x1080)/ HiSilicon Kirin 710 (2.2 ГГц + 1.7 ГГц)/ двойная основная
-            камера: 16 Мп + 2 Мп, двойная фронтальная камера: 24 Мп + 2 Мп/ RAM 4 ГБ/ 64 ГБ
-            встроенной памяти + microSD (до 256 ГБ)/ 3G/ LTE/ A-GPS/ ГЛОНАСС/ BDS/ поддержка
-            2х SIM-карт (Nano-SIM)/ Android 8.1 (Oreo)/ 3340 мА*ч</p>
-        <a class="more" href="https://rozetka.com.ua/huawei_p_smart_plus_black/p48225238/" target="_blank">Подробнее
+        <p>Экран (6.3", IPS, 2340x1080) / HiSilicon Kirin 710 (2.2ГГц + 1.7ГГц) / двойная основная камера: 16Мп + 2Мп / двойная фронтальная камера: 24Мп + 2Мп / RAM 4ГБ / 64ГБ встроенной памяти + microSD (до 256ГБ) / 3G / LTE / A-GPS / ГЛОНАСС / BDS / поддержка 2х SIM-карт (Nano-SIM) / Android 8.1 (Oreo) / 3340мА*ч</p>
+        <a class="more" href="https://rozetka.com.ua/huawei_p_smart_plus_black/p48225238/" target="_blank">Подробнее &nbsp;»»
         </a>
 
     </div>
@@ -61,7 +58,10 @@
 <!--Подвал-->
 <footer>
     <p>* Характеристики и комплектация товара могут изменяться производителем без уведомления</p>
-    <p>* Внимание! Все телефоны имеют кирилличные буквы на клавиатуре, украинское меню !</p>
+    <p>* Внимание! Все телефоны имеют кирилличные буквы на клавиатуре, украинское меню!</p>
 </footer>
+
+<div class="clss"></div>
+<!-- /.clss -->
 </body>
 </html>
